# CoffeeChat-GitBook

./: .gitignore  LICENSE  README.md  test
resources/: protobuf使用_王道.pptx
resources/普通程序员/: IM移动端怎么搜索本地聊天记录.md  IM系统的SESSION结构.md  README.md  SUMMARY.md  TimeLine模型下确保消息有序不丢.md  一个海量在线用户即时通讯系统（IM）的完整设计.md  一个海量在线用户即时通讯系统（IM）的完整设计Plus.md  基于TimeLine模型的消息同步机制.md
v-beta/: README.md  SUMMARY.md  book.json
v-beta/chapter1/: 1-install-go-and-ide.md  2-hello-world.md  README.md
v-beta/chapter2/: 1-linux-system-call-examples.md  2-project-p2p.md  3-project-p2p-2.md  4-multi-p2p.md  5-echo-server-with-robot.md  README.md
v-beta/chapter3/: 1-thread-intro.md.md  2-pthread-std-thread.md  5-echo-server-with-robot.md  README.md
v-beta/code/chapter2/6-protobuf-examples/: CMakeLists.txt  README.md  main.cpp  make-protobuf.sh
v-beta/code/chapter2/6-protobuf-examples/pb/: build.sh  chat.base.proto  chat.msg.proto
v-beta/code/chapter2/7-project-tcp-robot-server/server/: CMakeLists.txt  server.cpp  wechat_api.cpp  wechat_api.h
v-beta/code/chapter2/7-project-tcp-robot-server/server/cpp-httplib/: httplib.h
v-beta/design/: flow-chart.graffle  flow-chart.puml
v1/: README.md  SUMMARY.md
v1/_book_code/: CMakeLists.txt  main.cpp
v1/_docs/: README.md  sources.md  todo.md
v1/_puml/: pwd_salt.puml
v1/chapter1/: README.md  book.md  sourceproject.md  study-roadmap.md
v1/chapter2/: 1-im-introduce.md  10-linux-io-multiplexing.md  2-tcp-or-udp.md  3-tcp-manager.md  4-protocol.md  5-high-availability.md  6-difficult-technology.md  7-linux-develop-environment.md  8-endian.md  9-io-multiplexing-and-socket.md  9-linux-socket-api-intro.md  README.md
v1/chapter3/: 1-design-object.md  2-physical-architecture.md  3-logic-architecture.md  4-module-sequence.md  5-protocol-design.md  README.md
v1/chapter4/: 1-base-libraries.md  10-goland-and-clion.md  11-trie.md  12-salted-password-hashing.md  6-zookeeper.md  (+16 more)
(+44 files in other folders)
